--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_1">首页</string>
+    <string name="tab_2">项目</string>
+    <string name="tab_3">广场</string>
+    <string name="tab_4">公众号</string>
+    <string name="tab_5">我</string>
 </resources>
