--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="tab_3">广场</string>
     <string name="tab_4">公众号</string>
     <string name="tab_5">我</string>
+    <string name="dialog_title">提示</string>
+    <string name="dialog_cancel">取消</string>
 </resources>
