--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">zs-wan-android</string>
+    <string name="app_name">玩安卓</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tab_1">首页</string>
     <string name="tab_2">项目</string>
     <string name="tab_3">广场</string>
